# mcp-playground

./: .gitignore  README.md  docker-compose.yaml
clients/cli-chatbot/: README.md  main.py  pyproject.toml  servers_config.json
clients/ui-streamlit/: .env-examples  config.py  pyproject.toml  requirements.txt  servers_config.json
clients/ui-streamlit/apps/: mcp_playground.py
clients/ui-streamlit/services/: ai_service.py  chat_service.py  mcp_service.py
clients/ui-streamlit/ui_components/: sidebar_components.py
docs/: plan.md
servers/mcp-datadog/: .env.template  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
servers/mcp-datadog/docs/: modules.md
servers/mcp-datadog/modules/: __init__.py  alerts.py  apm.py  dashboard.py  downtime.py  events.py  host.py  incident.py  logs.py  metrics.py  monitor.py  roles.py  root_cause.py  service_checks.py  service_dependencies.py  slo.py  tags.py  trace.py  usage.py  users.py
servers/mcp-user-db/: config.py  pyproject.toml  server.py  tools.py
